--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
   </head>
   <body>
     <canvas id="webgl"></canvas>
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="main.js"></script>
   </body>
 </html>
